fix collapsing name

--- a/cmd/ui/assets/src/app/clusters/cluster/cluster.component.scss
+++ b/cmd/ui/assets/src/app/clusters/cluster/cluster.component.scss
@@ -705,6 +705,10 @@
       .metrics-cell {
         justify-content: center !important;
       }
+
+      .machine-name-cell {
+        min-width: max-content;
+      }
     }
 
     .mat-paginator {
